--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -18,45 +18,61 @@
         android:gravity="center_vertical"
         >
 
-        <TextView
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/TXT00011"
+                android:id="@+id/TXT00011"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/latitude"
+                android:enabled="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/TXT00012"
+                android:id="@+id/TXT00012"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/longitude"
+                android:enabled="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_gravity="center_vertical"/>
+        </LinearLayout>
+
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/TXT00011"
-            android:id="@+id/TXT00011"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center_vertical"/>
-
-        <TextView
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/latitude"
-            android:enabled="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center_vertical"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/TXT00012"
-            android:id="@+id/TXT00012"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center_vertical"/>
-
-        <TextView
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/longitude"
-            android:enabled="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center_vertical"/>
+            android:id="@+id/setMyPosition"
+            android:src="@android:drawable/ic_menu_mylocation"
+            android:contentDescription="@string/TXT00035"
+            android:onClick="setMyPosition"/>
     </LinearLayout>
 
     <LinearLayout
@@ -89,7 +105,7 @@
                 android:maxLength="4"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
-                android:inputType="numberDecimal"/>
+                android:inputType="number"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -120,7 +136,6 @@
             <EditText
                 android:layout_width="65dp"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
                 android:ems="10"
                 android:id="@+id/pric"
                 android:enabled="true"
@@ -128,7 +143,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
                 android:gravity="center_vertical"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:inputType="number"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -219,7 +235,7 @@
             android:visibility="gone"/>
 
         <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolListView"
             android:visibility="gone"/>
